fix genres